# tp-orchestration

./: .gitignore  COMMANDES_GITHUB_EXACTES.md  CONTRIBUTING.md  CREATION_GITHUB_SUMMARY.md  GUIDE_FINAL_GITHUB_SETUP.md  PUSH_GITHUB_MAINTENANT.md  README.md  RECAPITULATIF.md  RECAPITULATIF_FINAL.md  RECAPITULATIF_FINAL_GITHUB.md  RECAPITULATIF_GITHUB_SETUP.md  launch.py  launch_fixed.py  pyproject.toml  quick_launch.py  setup.py  setup_project_structure.py
.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml
conf/base/: logging.yml  mlflow_config.yml  model_config.yml
data/01_raw/: data.yaml
data/01_raw/labels/test/: 00000.txt  00001.txt  00005.txt  00007.txt  00014.txt  00019.txt  00021.txt  00022.txt  00026.txt  00033.txt  00034.txt  00045.txt  00048.txt  00051.txt  00052.txt  00054.txt  00055.txt  00060.txt  00066.txt  00069.txt  00072.txt  00073.txt  00078.txt  00080.txt  00082.txt  00086.txt  00089.txt  00093.txt  00103.txt  00107.txt  00108.txt  00110.txt  00115.txt  00116.txt  00121.txt  00130.txt  00142.txt  00143.txt  00153.txt  00156.txt  (+3201 more)
data/01_raw/labels/train/: 00002.txt  00003.txt  00006.txt  00008.txt  00009.txt  00012.txt  00016.txt  00017.txt  00018.txt  00024.txt  00025.txt  00028.txt  00029.txt  00031.txt  00037.txt  00041.txt  00044.txt  00049.txt  00050.txt  00053.txt  00057.txt  00058.txt  00064.txt  00070.txt  00075.txt  00076.txt  00081.txt  00087.txt  00088.txt  00097.txt  00099.txt  00101.txt  00104.txt  00105.txt  00111.txt  00112.txt  00113.txt  00118.txt  00123.txt  00124.txt  (+3321 more)
docker/: Dockerfile.api  Dockerfile.training  docker-compose.yml  entrypoint-training.sh  init-postgres.sql  prometheus.yml
helm/road-sign-app/: README.md
kubernetes/: configmap.yaml  namespace.yaml  secret.yaml
kubernetes/api/: deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  service.yaml
kubernetes/mlflow/: deployment.yaml  pvc.yaml  service.yaml
kubernetes/monitoring/: grafana-deployment.yaml  grafana-service.yaml  prometheus-deployment.yaml  prometheus-service.yaml
requirements/: base.txt  base_fixed.txt  dev.txt  minimal.txt  prod.txt
scripts/: deploy-k8s.sh  stress_test.py  stress_test_advanced.py
src/: __init__.py
src/api/: main.py  main_simple.py
src/ml_pipelines/: __init__.py  data_pipeline.py  inference_pipeline.py  training_pipeline.py
src/tests/: test_api.py  test_data_pipeline.py  test_inference_pipeline.py
